# Advent-of-Code

./: .gitignore  .pylintrc  LICENSE.md  README.md  generate_day.sh  pyproject.toml
.github/workflows/: lint.yml  ruff.yml
2021/day_03/: main.py
2021/day_04/: main.py
2021/day_05/: main.py
2021/day_06/: main.py
2021/day_07/: main.py
2021/day_1/: input  main.py
2021/day_10/: input  main.py  test_input
2021/day_11/: input  main.py  test_input
2021/day_12/: main.py
2021/day_13/: input  main.py
2021/day_14/: input  main.py  test_input
2021/day_15/: input  main.py  test_input
2021/day_16/: main.py
2021/day_17/: main.py
2021/day_18/: input  main.py
2021/day_19/: input  main.py
2021/day_2/: main.py  test_input
2021/day_20/: input  main.py  test_input
2021/day_21/: input  main.py
2021/day_22/: input  main.py
2021/day_23/: input  main.py
2021/day_24/: input  main.py  test_input
2021/day_25/: input  main.py
2021/day_3/: input  main.py
2021/day_4/: input  main.py
2021/day_5/: main.py
2021/day_6/: main.py
2021/day_7/: main.py
2021/day_8/: main.py
2021/day_9/: input  main.py
2022/day_01/: main.py
2022/day_02/: main.py
2022/day_04/: main.py
2022/day_05/: main.py
2022/day_07/: main.py
2022/day_08/: main.py
2022/day_09/: main.py
2022/day_1/: main.py
2022/day_10/: main.py
2022/day_11/: main.py
2022/day_12/: main.py
2022/day_13/: main.py  test_input
2022/day_14/: main.py
2022/day_15/: main.py
2022/day_16/: main.py
2022/day_17/: main.py
2022/day_18/: main.py
2022/day_19/: main.py
2022/day_2/: main.py
2022/day_20/: input  main.py
2022/day_21/: input  main.py
2022/day_22/: main.py
2022/day_23/: main.py
2022/day_24/: main.py
2022/day_25/: main.py
2022/day_3/: main.py
2022/day_4/: main.py
2022/day_5/: main.py
day_1/: main.py
day_12/: input  test_input
day_2/: input  main.py
day_3/: main.py
day_5/: input  main.py
day_8/: input  main.py
script/: generate_day.sh  run_pylint.sh
scripts/: generate_day.sh  run_black.sh  run_pylint.sh
(+67 files in other folders)
