[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent Of Code repo"
authors = ["TurtleSmoke"]
license = "MIT"
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
pylint = "^2.15.8"
black = "^22.10.0"
shapely = "^2.0.0"
scipy = "^1.9.3"
cpmpy = "^0.9.10"
parse = "^1.20.0"

[tool.black]
line-length = 120
target-version = ['py38', 'py39']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
