[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent Of Code repo"
authors = ["TurtleSmoke"]
license = "MIT"
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pylint = "^2.15.8"
black = "^22.10.0"
shapely = "^2.0.0"
scipy = "^1.9.3"
cpmpy = "^0.9.10"
parse = "^1.20.0"
sympy = "^1.12"
z3-solver = "^4.12.4.0"
networkx = "^3.2.1"

[tool.black]
line-length = 120
target-version = ['py310']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
